--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,13 +42,13 @@ jobs:
           make clean
           make all BUILD_LOADER=grub
           make all BUILD_LOADER=limine
-          echo "::set-env name=RELEASE_TAG::$(date +'%y.%W')"
+          echo "RELEASE_TAG=$(date +'%y.%W')" >> $GITHUB_ENV
 
     - name: Building skiftOS (x86_64)
       run: |
           make clean
           make all BUILD_ARCH=x86_64 BUILD_LOADER=limine
-          echo "::set-env name=RELEASE_TAG::$(date +'%y.%W')"
+          echo "RELEASE_TAG=$(date +'%y.%W')" >> $GITHUB_ENV
 
     - name: Creating Release
       id: create_release
